--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<link rel="stylesheet" type="text/css" href="./styles.css"/>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-	</head>
-	<body>
+<html>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    </head>
+    <body>
         <h1>- MINESWEEPER -</h1>
         <div id="main_container">
             <div id="grid_size_input">
                 <form >
                     <h2>Choose the size of your game grid.</h2>
                     <br>
-                    <h2>Pick values that range from 5 to 100:</h2>
+                    <h2>Pick values that range from 5 to 40:</h2>
                     <br>
                     <input type="text" id='grid_length' placeholder="length">
                     <input type="text" id='grid_height' placeholder="height">
@@ -38,7 +37,8 @@
             <div id="game_grid" hidden>
 
             </div>
-        </div>
-		<script src="./scripts.js"></script>
-	</body>
-</html>
+            <br>
+            <br>
+            <div id="input_warning" hidden>
+                <h2>Values out of range - enter numeric values that range from 5 to 40.</h2>
+       
