--- a/index.html
+++ b/index.html
@@ -41,4 +41,8 @@
             <br>
             <div id="input_warning" hidden>
                 <h2>Values out of range - enter numeric values that range from 5 to 40.</h2>
-       
+            </div>
+        </div>
+		<script src="./scripts.js"></script>
+	</body>
+</html>
